tests/NormalTests/paczka1/fuzzy1/25730086.err
Error in line 3: G2aPRDaUj S850 15,6
Error in line 7: 9oTW3leLi64 S93I 68,4
Error in line 8: A613 A613 96,9
Error in line 12: 9oTW3leLi64 S937 270,2
Error in line 21: nSY6IUlFBi7 A6<3 <0,9
Error in line 28: 9oTW3leLi64 S850 297,27
Error in line 30: nSY6IUlFBi7 A613 39,4
Error in line 38: ozuXwK3Tbd S937 84,6
